--- a/app/src/main/res/layout/activity_wardrobe_cloth.xml
+++ b/app/src/main/res/layout/activity_wardrobe_cloth.xml
@@ -53,7 +53,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/page_background">
+        android:background="@color/page_background"
+        android:id="@+id/root">
 
 <!--展示框-->
         <androidx.recyclerview.widget.RecyclerView
