--- a/app/src/main/res/layout/activity_wardrobe_cloth.xml
+++ b/app/src/main/res/layout/activity_wardrobe_cloth.xml
@@ -27,6 +27,16 @@
             android:background="@drawable/backtohomepage"
             android:src="@drawable/arrow_circle_left" />
 
+        <TextView
+            android:id="@+id/cloth_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="17dp"
+            android:text="取消"
+            />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
@@ -34,6 +44,7 @@
             android:background="@drawable/divider" />
 
         <TextView
+            android:id="@+id/cloth_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -48,6 +59,15 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="17dp"
             android:background="@drawable/add" />
+
+        <TextView
+            android:id="@+id/cloth_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="17dp"
+            android:text="确定" />
     </RelativeLayout>
 
     <RelativeLayout
