--- a/app/src/main/res/layout/fragment_dressing.xml
+++ b/app/src/main/res/layout/fragment_dressing.xml
@@ -28,6 +28,19 @@
             android:layout_centerInParent="true"
             android:text="@string/title_dressing"
             android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/mine_button"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="300sp"
+            android:layout_marginTop="0sp"
+
+            android:text="我的穿搭"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -35,7 +48,8 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:background="@drawable/weather_frame"
-        android:layout_gravity="right"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="left"
         android:padding="16dp">
 
         <View
@@ -90,6 +104,147 @@
             android:text="Weather"
         />
 
+
     </RelativeLayout>
+
+
+    <FrameLayout
+        android:layout_width="175dp"
+        android:layout_height="160dp"
+        android:layout_marginLeft="200sp"
+        android:layout_marginTop="-130dp"
+        android:layout_marginBottom="20sp">
+
+        <TextView
+            android:id="@+id/Clothe_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/radiobutton"
+            android:text="衣服"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:visibility="visible" />
+        <ImageView
+            android:id="@+id/Clothes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/radiobutton"
+            android:visibility="gone"/>
+
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:layout_width="175dp"
+        android:layout_height="160dp"
+        android:layout_marginLeft="200sp"
+        android:layout_marginBottom="20sp"
+        android:background="@drawable/radiobutton">
+
+        <TextView
+            android:id="@+id/Pant_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/radiobutton"
+            android:text="裤子"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:visibility="visible" />
+        <ImageView
+            android:id="@+id/Pants"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/radiobutton"
+            android:visibility="gone"/>
+
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="175dp"
+        android:layout_height="160dp"
+        android:layout_marginLeft="200sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="35sp"
+        android:background="@drawable/radiobutton">
+
+        <TextView
+            android:id="@+id/Shoe_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/radiobutton"
+            android:text="鞋子"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:visibility="visible" />
+        <ImageView
+            android:id="@+id/Shoes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/radiobutton"
+            android:visibility="gone"/>
+
+    </FrameLayout>
+
+
+
+
+
+
+    <Button
+        android:id="@+id/save_button"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="3sp"
+        android:layout_marginTop="-180dp"
+        android:text="保存至我的穿搭"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+    <Button
+        android:id="@+id/re_button"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="3sp"
+        android:layout_marginTop="30dp"
+
+        android:text="重新推荐"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+    <RadioGroup
+        android:id="@+id/radiogroup"
+        android:layout_width="250dp"
+        android:layout_height="600dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-360dp">
+    <RadioButton
+        android:id="@+id/LeisureBtn"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/radiobutton"
+        android:gravity="center"
+        android:text="休闲" />
+    <RadioButton
+        android:id="@+id/SportBtn"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/radiobutton"
+        android:gravity="center"
+        android:text="运动" />
+
+    <RadioButton
+        android:id="@+id/FormalBtn"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/radiobutton"
+        android:gravity="center"
+        android:text="正式" />
+</RadioGroup>
 
 </LinearLayout>
